data/derived/comb/progs/unify/prog5394.ml.out
Characters 90-94:
  let fixpoint (f,b) = wwhile ((let f' b = if (f b) = b then (b, true) else (f b, false) in f' b),b);;
                                                                                            ^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
